WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
165201
REGRESSION (209086): IDB tests crash under GuardMalloc
https://bugs.webkit.org/show_bug.cgi?id=165201
Summary
REGRESSION (209086): IDB tests crash under GuardMalloc
Brady Eidson
Reported
2016-11-30 09:17:44 PST
REGRESSION (209086): IDB tests crash under GuardMalloc
https://trac.webkit.org/changeset/209086
At least some of the TransactionOperations in the IDBTransaction m_transactionOperationsInProgressQueue queue are not protected as they should be. (Queue of raw ptrs) Exploring.
Attachments
Patch
(1.89 KB, patch)
2016-11-30 09:32 PST
,
Brady Eidson
cdumez
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews112 for mac-yosemite
(2.33 MB, application/zip)
2016-11-30 11:34 PST
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-11-30 09:31:08 PST
Found it, easy fix.
Brady Eidson
Comment 2
2016-11-30 09:32:51 PST
Created
attachment 295724
[details]
Patch
Chris Dumez
Comment 3
2016-11-30 09:35:46 PST
Comment on
attachment 295724
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=295724&action=review
r=me
> Source/WebCore/ChangeLog:8 > + No new tests (Covered by literally every IDB test when run under GuardMallo).
typo: GuardMallo
Build Bot
Comment 4
2016-11-30 11:34:50 PST
Comment on
attachment 295724
[details]
Patch
Attachment 295724
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2596306
Number of test failures exceeded the failure limit.
Build Bot
Comment 5
2016-11-30 11:34:53 PST
Created
attachment 295736
[details]
Archive of layout-test-results from ews112 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-yosemite Platform: Mac OS X 10.10.5
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug