REGRESSION (209086): IDB tests crash under GuardMalloc. https://bugs.webkit.org/show_bug.cgi?id=165201

Reviewed by Chris Dumez.

No new tests (Covered by literally every IDB test when run under GuardMalloc).

* Modules/indexeddb/IDBTransaction.cpp:
(WebCore::IDBTransaction::commitOnServer): "Commit on Server" operations are special, in that they
  are the last operation a transaction does, and they remove themselves from the protector map right away.
  So when we remove them from the protector map we also need to remove their raw-pointer from the
  "in-progress" queue.

Canonical link: https://commits.webkit.org/182818@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209132 268f45cc-cd09-0410-ab3c-d52691b4dbfc